--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,28 @@ jobs:
      runs-on: ubuntu-latest
      steps:
        - uses: actions/checkout@v2
+       - name: Cache protobuf library
+         id: cache-protobuf
+         uses: actions/cache@v1
+         with:
+           path: protobuf
+           key: ${{ runner.os }}-protobuf
+       - name: Build protobuf library
+         if: steps.cache-protobuf.outputs.cache-hit != 'true'
+         run: |
+           git clone https://github.com/protocolbuffers/protobuf.git
+           cd protobuf
+           git submodule update --init --recursive
+           ./autogen.sh
+           ./autogen.sh  # see https://github.com/protocolbuffers/protobuf/issues/149
+           ./configure
+           make
+           make check
+       - name: Install protobuf library
+         run: |
+           cd protobuf
+           sudo make install
+           sudo ldconfig
        - name: make
          run: make
          working-directory: ./2020/github-actions-protobuf
